# biassemble-engine

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  biassemble-rag-spec-v1.md  fly.toml  pyproject.toml  space-vars.env
.github/workflows/: build-llama-wheel.yml  production-drift.yml  pytest.yml  retrieval-gate.yml
.skills/: embedding-provider.md  evaluation.md  indexing-pipeline.md  rag-pipeline.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
adr/: 001-vector-search-retrieval.md  002-nli-zero-shot-shortlist.md  003-generative-llm-bias-selection.md  004-ci-metrics-gate.md  005-fine-tune-engine-llm.md  006-blind-spot-ship-gate.md
evaluations/: HISTORY.md  assessment_eval_2026-07-03.md
evaluations/adversarial/: manipulative_narrative.json  politician_speech.json
evaluations/baselines/: baseline_2026-07-02.json  baseline_2026-07-03.json  baseline_2026-07-07.json  baseline_2026-07-08.json  baseline_2026-07-09.json  baseline_2026-07-14.json  baseline_2026-07-17.json
evaluations/blind_spot/: adv_004.json  adv_005.json  adv_006.json  adv_007.json  adv_008.json  adv_009.json  adv_010.json  adv_011.json  adv_012.json  adv_013.json  adv_014.json  adv_015.json  adv_016.json  adv_017.json  adv_018.json  adv_019.json  adv_020.json  adv_021.json  adv_022.json  adv_023.json  edge_003.json  edge_004.json  edge_005.json  edge_006.json  edge_007.json  edge_008.json  edge_009.json  edge_010.json  edge_011.json  edge_012.json  edge_013.json  edge_014.json  edge_015.json  edge_016.json  edge_017.json  edge_018.json  edge_019.json  edge_020.json  edge_021.json  edge_022.json  (+40 more)
evaluations/capability_probes/: satire_piece.json
evaluations/diagnostics/: analysis_2026-07-03.md  diagnostics_2026-07-03.json
evaluations/edge/: cautious_investor.json  grieving_father.json
evaluations/negative/: bus_schedule.json  historical_summary.json  product_changelog.json  recipe_instructions.json  weather_report.json
evaluations/positive/: lottery_winner.json  marcus_novatech.json  startup_overruns.json  vaccine_study.json
evaluations/sft/: coverage_report.json  sft_dataset.jsonl  weak_supervision_pairs.jsonl
evaluations/staging/: blind_spot_eval_2026-07-13.json  blind_spot_eval_2026-07-13_SUMMARY.md
evaluations/staging/sft_raw_batches/: b1_prompt.txt  b2_prompt.txt  b3_prompt.txt  b4_prompt.txt  b5_topup_prompt.txt  b6_negative_topup_prompt.txt  cl_b1.json  cl_b2.json  cl_b3.json  co_b1.json  co_b2.json  co_b3.json  co_b4.json  co_b5.json  consolidated_pre_labeling-2.jsonl  consolidated_pre_labeling-3.jsonl  consolidated_pre_labeling.jsonl  consolidated_topup_b5.jsonl  ds_b1.json  ds_b2.json  ds_b3.json  ds_b4.json  ds_b5.json  gm_b3.json  gm_b4.json  gm_b5.json  gpt_b1.json  gpt_b2.json  gpt_b4.json  gr_b4.json  gr_b5.json  labeled_deepseek_all.jsonl  labeled_deepseek_all_v2.jsonl  labeled_topup_b5.jsonl  (+12 more)
hypotheses/: v1.yaml  v2.yaml
knowledge/: STYLE_GUIDE.md  affect_heuristic.md  ambiguity_effect.md  anchoring_bias.md  authority_bias.md  availability_heuristic.md  bandwagon_effect.md  base_rate_neglect.md  choice_supportive_bias.md  confirmation_bias.md  curse_of_knowledge.md  decoy_effect.md  dunning_kruger_effect.md  escalation_of_commitment.md  framing_effect.md  fundamental_attribution_error.md  gamblers_fallacy.md  halo_effect.md  hindsight_bias.md  hot_hand_fallacy.md  illusion_of_control.md  in_group_bias.md  loss_aversion.md  narrative_fallacy.md  negativity_bias.md  omission_bias.md  optimism_bias.md  overconfidence_bias.md  planning_fallacy.md  projection_bias.md  recency_bias.md  representativeness_heuristic.md  self_serving_bias.md  spotlight_effect.md  status_quo_bias.md  stereotyping_bias.md  sunk_cost_fallacy.md  survivorship_bias.md  zero_risk_bias.md
migrations/: 001_create_bias_embeddings.down.sql  001_create_bias_embeddings.sql
scripts/: assemble_sft_dataset.py  check_regression.py  deploy_hf_space.sh  generate_seed_sql.py  generate_story_patterns.py  label_sft_stories.py  probe_chunk.py  reconstruct_blind_spot_stories.py  reconstruct_weak_pairs.py  run_evaluation.py  run_indexing.py  spike_llm_bias.py  sync_space_vars.py  tune_threshold.py  validate_bias_catalog.py
specs/: vector-search-when.md
specs/001-rag-retrieval/: data-model.md  plan.md  python-patterns.md  research.md  spec.md  tasks.md
specs/002-improve-taxonomy-retrieval/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-nli-zero-shot-shortlist/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-add-llm-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ci-metrics-gate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fine-tune-llm/: candidate-2026-07-18-results.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py  observability.py
src/api/: app.py
src/db/: connection.py  queries.py
src/evaluation/: evaluate.py
src/indexing/: chunk_builder.py  embedder.py  indexer.py  normalizer.py
src/llm/: generator.py  prompt.py
src/nli/: classifier.py  combiner.py  hypothesis_loader.py
src/providers/: base.py  sentence_transformer.py
src/retrieval/: query_builder.py  reranker.py  retriever.py  searcher.py
src/schemas/: internal.py  request.py  response.py
src/selection/: base.py  llm_union.py  nli_union.py  vector_only.py
supabase/.temp/: linked-project.json  project-ref
tests/: test_assemble_sft_dataset.py  test_check_regression.py  test_chunk_builder.py  test_evaluate.py  test_llm_prompt.py  test_llm_source.py  test_llm_union.py  test_normalizer.py  test_observability.py  test_query_builder.py  test_reranker.py  test_retrieve_endpoint.py  test_strategy_switch.py  test_validate_bias_catalog.py
training/: lora_finetune.md
training/manifests/: gemma3-4b-lora-2026-07-18.json  gemma3-4b-lora-2026-07-18_merged-gguf_predictions.json  gemma3-4b-lora-2026-07-18_predictions.json
(+18 files in other folders)
