[project]
name = "biassemble-engine"
version = "0.1.0"
description = "Semantic bias retrieval microservice — RAG over pgvector"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "structlog>=24.0.0",
    "transformers[sentencepiece]>=5.12.1",
    # spec-004 (ADR-003): local generative LLM bias selection.
    # BUILT FROM SOURCE (PyPI sdist), not a prebuilt wheel. The T003 spike proved the
    # only prebuilt CPU wheel (abetlen index, `linux_x86_64`) is musl-linked and will
    # NOT load on the glibc base image (python:3.11-slim / Debian) — it needs
    # libc.musl-x86_64.so.1. PyPI ships sdist only. So llama-cpp-python compiles from
    # source at build time; the Dockerfile installs `build-essential cmake` for this.
    # Exact pin so the compiled version is reproducible. Fallback if a build ever breaks:
    # raw `transformers` generation (slower, but wheel-installable). Verified building on
    # glibc locally (~2m) and loading + running the Qwen GGUF (spike, research.md).
    "llama-cpp-python==0.3.19",
    "huggingface-hub>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# llama-cpp-python has no usable prebuilt wheel on PyPI (sdist only) and the abetlen
# linux wheel is musl-linked (fails on glibc). Compiling from source OOM-kills on HF's
# build machine. So we vendor a portable manylinux wheel, built once in GitHub Actions
# (.github/workflows/build-llama-wheel.yml), and pin the dependency straight to that
# file — uv installs it directly, no compile on deploy.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
llama-cpp-python = { path = "vendor/wheels/llama_cpp_python-0.3.19-cp311-cp311-manylinux_2_34_x86_64.whl" }

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
]
